# katana-mig

./: .gitignore  AGENTS.md  pyproject.toml  task-workflow.md
.claude/: settings.local.json
engine/: README.md  alembic.ini
plans/: 2026-06-29-001ab-source-slice-approval.md  2026-06-29-001d-minimal-mapping-slice.md  2026-06-29-001e-ui-shell.md  2026-06-29-001i-ui-template-foundation.md  2026-06-29-001j-engine-fastapi-foundation.md  2026-06-29-001k-api-contracts-auth.md  2026-06-29-001l-ui-auth-api-wiring.md  2026-06-29-001m-ui-management-user-admin.md  2026-06-29-001n-ui-role-based-navigation.md  2026-06-29-001o-project-crud.md  2026-06-29-001p-project-crud-ui.md  2026-06-29-001q-source-intake.md  2026-06-29-001r-codegen-artifact-model.md  2026-06-29-001s-ai-adapters.md  2026-06-29-001t-runs-api.md  2026-06-29-001u-runs-ui.md  2026-06-29-001v-source-analysis.md  2026-06-29-small-auth-mapping-phases.md  2026-06-30-001ac-mapping-hardening.md  2026-06-30-001ad-runs-analysis-review-hardening.md  2026-06-30-001ae-lookup-snapshot-route-rehome.md  2026-06-30-001af-ui-compliance-gaps.md  2026-06-30-001h-portfolio-dashboard.md  2026-06-30-001w-mapping-stage.md  2026-06-30-001x-lookup-value-mapping.md  2026-06-30-001y-codegen-service.md  2026-06-30-001z-review-gates.md  2026-07-01-001aa-reconciliation.md  2026-07-01-001ag-delivery-bundle-tab.md  2026-07-01-001ah-delivery-bundle-sequencing.md  2026-07-01-001ai-knowledge-freeze-history.md  2026-07-01-001as-impact-review.md
tasks/: 001aa-reconciliation.md  001af-ui-compliance-gaps.md  001ag-delivery-bundle-tab.md  TASK_INDEX.md  (+18 more)
(+324 files in other folders)
