[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "katana-engine"
version = "0.1.0"
description = "Katana governed migration engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "anthropic>=0.40.0",
  "openai>=1.0.0",
  "pyyaml>=6.0",
  "pymysql>=1.1",
  "bcrypt>=4.2",
  "PyJWT>=2.9",
  "email-validator>=2.2"
]

[project.scripts]
katana-seed-admin = "migrations_engine.seed:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11"
]

[tool.setuptools]
package-dir = {"" = "engine/src"}

[tool.setuptools.packages.find]
where = ["engine/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["engine/tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_generics = true
